--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -8,13 +8,6 @@
 <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
 <script src="/javascripts/jquery-1.10.2.min.js"></script>
 <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
-<style>
-#map {
-	width: 100%;
-	height: 300px;
-	border: solid 1px #ccc;
-}
-</style>
 </head>
 <body>
 <div id="geoLocationIndex" data-role="page">
@@ -24,13 +17,19 @@
 </div>
 
 <div data-role="content">
-
+<style>
+#map {
+	width: 100%;
+height: 300px;
+border: solid 1px #ccc;
+}
+</style>
 <div id="map"></div>
-<div id="latitude"></div>
+<!--<div id="latitude"></div>
 <div id="longitude"></div>
 <div id="accuracy"></div>
 <div id="timestamp"></div>
-<div id="elapsedTime">経過時間：----</div>
+<div id="elapsedTime">経過時間：----</div>-->
 
 <input id="ridingId" type="hidden" value=""/>
 
@@ -39,28 +38,84 @@
 </div>
 
 <div data-role="footer" data-position="fixed">
-  <a href="/" data-rel="back">戻る</a>
+<a href="/" data-rel="back">戻る</a>
 </div>
-<script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> 
+
+<script src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true&callback=initLocation"></script> 
 <script>
 
 //監視識別ID
 var watch_id = 0;
+
+//記録開始日時
 var startDateTime;
 
+//最新緯度・経度
 var latitude = 0;
 var longitude = 0;
 
+//乗車ID
 var ridingId = "";
 
+//GeoLocationAPIのオプション
 var option = {
 		enableHighAccuracy:true,
 		timeout:10000,
 		maximumAge:0
 };
 
-//***** 位置情報が取得できない場合 *****/
+var geoLocations = <%-JSON.stringify(geoLocations)%>;
+
+var map;
+var bounds;
+
+var goldStar = {
+		  path: 'M 125,5 155,90 245,90 175,145 200,230 125,180 50,230 75,145 5,90 95,90 z',
+		  fillColor: "yellow",
+		  fillOpacity: 0.8,
+		  scale: 1,
+		  strokeColor: "gold",
+		  strokeWeight: 14
+		};
+
+//RidingId生成
+function createRidingId(latitude,longitude)
+{
+	return $.now()+'@'+latitude+'@'+longitude;
+}
+
+//位置設定
+function initLocation(){
+
+	if(geoLocations != ''){
+		console.log("geoLocations.length:" + geoLocations.length);
+		displayTrackOnMap(geoLocations);
+	}else{
+	ridingId = "";
+	navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+	}
+}
+
+//評価画面に遷移
+function goTaxiReview(){
+	$.mobile.changePage('/taxi/add', { transition:'slide', reverse: false, reloadPage: true, data : 'ridingId=' + $('#ridingId').val() });
+}
+
+//位置情報をサーバに送信（計測中のみ）
+function sendGeoLocation()
+{
+	$.post("/geoLocation", 
+			{ latitude: latitude, 
+			longitude: longitude,
+			ridingId: ridingId
+			},
+			function() {}
+	);
+}
+
+//位置情報取得失敗時のコールバック
 function errorCallback(error) {
+
 	var err_msg = "";
 	switch(error.code)
 	{
@@ -77,110 +132,178 @@ function errorCallback(error) {
 	alert(err_msg);
 }
 
+function addMarker(geoloc) {
+	console.log("latitude : " + geoloc.latitude);
+	console.log("longitude : " + geoloc.longitude);
 
+	marker = new google.maps.Marker({
+		position: new google.maps.LatLng(geoloc.latitude, geoloc.longitude),
+		map: map,
+		title: geoloc.createdAt
+//		icon: goldStar
+	});
 
-function initLocation(){
+	// extend the bounds to include each marker's position
+	bounds.extend(marker.position);
 
-	//ユーザーの現在の位置情報を取得
-	ridingId = "";
-	navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+//	google.maps.event.addListener(marker, 'click', (function(marker, i) {
+//	return function() {
+//	infowindow.setContent(locations[i].latitude);
+//	infowindow.open(map, marker);
+//	}
+//	})(marker, i));
+	}
+
+function displayTrackOnMap(geoLocs){
+
+	if(google.maps.MapTypeId){
+		var options = {
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+		};
+
+		map = new google.maps.Map($("#map").get(0), options);
+		bounds = new google.maps.LatLngBounds();
+
+		var coordinates = [];
+		
+		for (i = 0; i < geoLocs.length; i++) {
+				addMarker(geoLocs[i]);
+				coordinates[i] =  new google.maps.LatLng(geoLocs[i].latitude, geoLocs[i].longitude);
+		}
+
+		var lineSymbol = {
+				  path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW
+				};
+		
+		var flightPath = new google.maps.Polyline({
+		    path: coordinates,
+		    strokeColor: '#FF0000',
+		    strokeOpacity: 1.0,
+		    strokeWeight: 3,
+		    icons: [{
+		        icon: lineSymbol,
+		        offset: '100%',
+		        repeat:'15%'
+		      }],
+		    map: map
+		  });
+		
+		
+		
+		map.fitBounds(bounds);
+		map.panToBounds(bounds);
+		
+		var listener = google.maps.event.addListener(map, "idle", function () {
+			google.maps.event.removeListener(listener);
+		});
+	}
 }
 
-
-function goTaxiReview(){
-	$.mobile.changePage('/taxi/add', { transition:'slide', reverse: false, reloadPage: true, data : 'ridingId=' + $('#ridingId').val() });
-}
-
-function sendGeoLocation()
-{
-	$.post("/geoLocation", 
-			{ latitude: latitude, 
-		      longitude: longitude,
-		      ridingId: ridingId
-			},
-			 function() {}
-			);
-}
-
+//位置情報成功時のコールバック
 function successCallback(event) {
+
 	// 緯度
 	latitude = event.coords.latitude;
-	$('#latitude').html('<span>緯度:'+latitude+'</span>');
+	// $('#latitude').html('<span>緯度:'+latitude+'</span>');
+
 	// 経度
 	longitude = event.coords.longitude;
-	$('#longitude').html('<span>経度:'+longitude+'</span>');
+	// $('#longitude').html('<span>経度:'+longitude+'</span>');
+
 	// 精度
-	var accuracy = event.coords.accuracy;
-	$('#accuracy').html('<span>誤差:'+accuracy+'</span>');
+	// var accuracy = event.coords.accuracy;
+	// $('#accuracy').html('<span>誤差:'+accuracy+'</span>');
 
 	// タイムスタンプ
-	var date = event.timestamp;
-	if( typeof(date) == "number" ) {
-		date = new Date(date);
-	}
-	if( typeof(date) == "number" ) {
-		date = new Date(date);
-	}
-	$('#timestamp').html( date.toString());
-	
-	var latlng = new google.maps.LatLng(latitude, longitude);
+	// var date = event.timestamp;
+	// if( typeof(date) == "number" ) {
+	// date = new Date(date);
+	// }
 
+	// if( typeof(date) == "number" ) {
+	// date = new Date(date);
+	// }
+	// $('#timestamp').html( date.toString());
+	
+	var latLng =new google.maps.LatLng(latitude, longitude);
+	
 	var options = {
 			zoom: 15,
-			center: latlng,
+			center:latLng,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
+	
+	map = new google.maps.Map($("#map").get(0), options);
 
-	var map = new google.maps.Map($("#map").get(0), options);
 	var marker = new google.maps.Marker({
-		position: latlng,
+		position: latLng,
 		map: map,
 		title: '現在地'
 	});
-	
-	$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime ))
-	
+
+	// $('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime ))
+
 	if(watch_id != 0){
 		sendGeoLocation();
 	}
 }
 
-$('#geoLocationIndex').bind('pageinit',   function() {
+//画面初期化時
+$('#geoLocationIndex').bind('pageinit', function() {
 
-	$("#RecordLocation").bind("click", function(){
-		if( watch_id > 0 ) {
-			
-			window.navigator.geolocation.clearWatch(watch_id);
-			
-			watch_id = 0;
-			
-			$('#RecordLocation').prop('value','タクシー乗車').button("refresh");
-			
-			startDateTime = null;
-			$('#elapsedTime').html('経過時間ミリ秒:----')
-			
-			goTaxiReview();
-			
-			
-		}else{
-			watch_id = navigator.geolocation.watchPosition(successCallback,errorCallback, option);
-			
-			$('#RecordLocation').prop('value','タクシー降車').button("refresh");
-			
-			startDateTime = $.now();
-			
-			$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime))
-			
-			ridingId = $.now()+'@'+latitude+'@'+longitude;
-			
-			$('#ridingId').val(ridingId);
-			
-		}
-	});
+	console.log("geoLocations: " + geoLocations);
+
+
+	if(geoLocations != ''){
+		//displayTrackOnMap(geoLocations);
+	}else{
+		
+		$("#RecordLocation").bind("click", function(){
+			if( watch_id > 0 ) {
+
+				window.navigator.geolocation.clearWatch(watch_id);
+
+				watch_id = 0;
+
+				$('#RecordLocation').prop('value','タクシー乗車').button("refresh");
+
+				startDateTime = null;
+				$('#elapsedTime').html('経過時間ミリ秒:----')
+
+				goTaxiReview();
+
+			}else{
+
+				watch_id = navigator.geolocation.watchPosition(successCallback,errorCallback, option);
+
+				$('#RecordLocation').prop('value','タクシー降車').button("refresh");
+
+				startDateTime = $.now();
+
+				$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime))
+
+				ridingId = createRidingId(latitude,longitude);
+
+				$('#ridingId').val(ridingId);
+
+			}
+		});
+	}	
 });
 
+//画面表示時
 $('#geoLocationIndex').bind('pageshow',   function() {
+
+	console.log("pageshow");
+	
+	if(geoLocations != ''){
+		$("#RecordLocation").parent().hide();
+	}else{
+		$("#RecordLocation").parent().show();
+	}
+
 	initLocation();
+
 });
 
 </script>
